syntax = "proto3";
package monitor.proto;

message CpuLoad {
    float load_avg_1 = 1;  // 1 minute load average
    float load_avg_3 = 2;  // 3 minute load average
    float load_avg_15 = 3; // 15 minute load average
}